# rp2040_plant_automation

./: .gitmodules  Cargo.toml  Embed.toml  README.txt  amqtt_config.yaml  build.rs  build_error_output.txt  build_error_output_2.txt  build_error_output_3.txt  build_error_output_4.txt  build_error_output_5.txt  build_error_output_i2c.txt  build_error_output_manual.txt  check_final.txt  check_http_server.txt  check_log.txt  check_output.txt  check_output_2.txt  check_output_3.txt  check_output_config.txt  check_output_nanofish.txt  check_output_nanofish_2.txt  check_percent.txt  compile_log.txt  control_algorithm.md  control_loop_pseudocode.md  control_requirements.md  hardware_spec.md  memory.x  mqtt_firebase_bridge.py  pin_map.md
.cargo/: cargo.toml  config.toml
src/: config_manager.rs  config_types.rs  control.rs  encoder_button_task.rs  hardware_manager.rs  keyboard.rs  lcd_backend.rs  lcd_task.rs  main.rs  main_ui.rs  persistence_manager.rs  sensor_history.rs  sensor_manager.rs  time_manager.rs  userscript.rs
src/control/: adaptive_tuner.rs
src/network/: cloud_sync.rs  connection_monitor.rs  http_server.rs  http_server_draft.rs  mod.rs  mqtt_task.rs  mqtt_task_draft.rs  time_sync_task.rs  wifi.rs
src/sensor_manager/: sensor_filter.rs
src/ui/: dashboard_task.rs  encoder_button_input_task.rs  encoder_input_task.rs  initial_configuration.rs  keyboard.rs  lcd_backend.rs  lcd_task.rs  mod.rs
