[package]
name = "rp2040_plant_automation"
version = "0.1.0"
edition = "2024"

[dependencies]
#system runtime
cortex-m-rt = "0.7.0"
talc = { version = "4.4.3", features = ["counters"]}
defmt = { version = "1.0.1", features = ["alloc"] }
defmt-rtt = "1.0.0"
embassy-executor = { path = "./embassy/embassy-executor", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { path = "./embassy/embassy-time" }
portable-atomic = { version = "1.5", features = ["critical-section"] }
spin = { version = "0.10.0", features = ["portable-atomic"]}
panic-probe = { version = "1.0.0", features = ["print-defmt"]}

#hal
embassy-rp = { path = "./embassy/embassy-rp", features = ["unstable-pac", "time-driver", "critical-section-impl", "rp2040", "defmt"] }
#embassy-usb = { path = "./embassy/embassy-usb", features = ["defmt", "max-interface-count-8"]}

#utils
embassy-sync = { path = "./embassy/embassy-sync" }
embassy-futures = { path = "./embassy/embassy-futures" }
embedded-io-async = "0.6.1"
embedded-io = "0.6.1"
embedded-hal-async = "1.0.0"
arrayvec = { version = "0.7.6", default-features = false }
embassy-embedded-hal = { path = "./embassy/embassy-embedded-hal" }
dummy-pin = "1.0.0"


#device drivers
st7920_async = { path = "./st7920_async" }

#misc
rgb = "0.8"

[dependencies.slint]
git = "https://github.com/slint-ui/slint.git"
default-features = false
features = ["compat-1-2", "unsafe-single-threaded", "libm", "renderer-software"]



[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = 'z'

[build-dependencies]
slint-build = {git = "https://github.com/slint-ui/slint.git"}