[package]
name = "rp2040_plant_automation"
version = "0.1.0"
edition = "2024"

[dependencies]
#system runtime
cortex-m-rt = "0.7.5"
talc = { version = "4.4.3", features = ["counters"]}
defmt = { version = "1.0.1", features = ["alloc"] }
defmt-rtt = "1.1.0"
embassy-executor = { path = "./embassy/embassy-executor", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { path = "./embassy/embassy-time" }
portable-atomic = { version = "1.5", features = ["critical-section"] }
spin = { version = "0.10.0", features = ["portable-atomic"]}
panic-probe = { version = "1.0.0", features = ["print-defmt"]}

#hal
embassy-rp = { path = "./embassy/embassy-rp", features = ["unstable-pac", "time-driver", "critical-section-impl", "rp2040", "defmt"] }
#embassy-usb = { path = "./embassy/embassy-usb", features = ["defmt", "max-interface-count-8"]}



#utils
embassy-sync = { path = "./embassy/embassy-sync" }
embassy-futures = { path = "./embassy/embassy-futures" }
embedded-io-async = "0.6.1"
embedded-io = "0.6.1"
embedded-hal-async = "1.0.0"
arrayvec = { version = "0.7.6", default-features = false }
embassy-embedded-hal = { path = "./embassy/embassy-embedded-hal" }
dummy-pin = "1.0.0"


#device drivers
st7920_async = { path = "./st7920_async" }

cyw43 = { path = "./embassy/cyw43", features = ["defmt", "firmware-logs"] }
cyw43-pio = { path = "./embassy/cyw43-pio", features = ["defmt"] }
embassy-net = { path = "./embassy/embassy-net", features = ["defmt", "tcp", "udp", "dhcpv4", "medium-ethernet", "dns"]  }

#misc



rgb = "0.8"
piddiy = "0.1.2"
adskalman = { version = "0.1.0", default-features = false }
fixed = { version = "1.28.0", features = ["num-traits", "serde"] }
arraydeque = { version = "0.5", default-features = false }
nalgebra = { version = "0.21", default-features = false }
temp_hum_sensor_async = { path = "./temp_hum_sensor_async" }
pcf8591_async = { path = "./pcf8591_async" }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }

# Persistence
sequential-storage = { version = "3.0.0", features = ["defmt-03"] }
embedded-storage = "0.3.1"
embedded-storage-async = "0.4.1"
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
postcard = { version = "1.0", default-features = false }
heapless = { version = "0.9.1", features = ["serde"] }

static_cell = { version = "2.1.1", features = ["nightly"] }
chrono = { version = "0.4.42", default-features = false, features = ["alloc", "serde"] }
qrcode2 = { version = "0.17.1", default-features = false }
embedded-tls = { version = "0.17.0", default-features = false, features = ["defmt"] }
rand_chacha = { version = "0.3", default-features = false }
rand_core = { version = "0.6.4", default-features = false }
picoserve = { version = "0.17.1", features = ["embassy", "alloc"] }
percent-encoding = { version = "2.3.2", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0.145", default-features = false, features = ["alloc"] }





[dependencies.slint]
git = "https://github.com/slint-ui/slint.git"
#path = "../slint/api/rs/slint"
default-features = false
features = ["compat-1-2", "unsafe-single-threaded", "libm", "renderer-software"]



[profile.release]
debug = 2
lto = "fat"
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = 'z'

[build-dependencies]
slint-build = {git = "https://github.com/slint-ui/slint.git"}
#slint-build = { path = "../slint/api/rs/build" }

[patch.crates-io]
embassy-time = { path = "./embassy/embassy-time" }
embassy-sync = { path = "./embassy/embassy-sync" }
embassy-futures = { path = "./embassy/embassy-futures" }
embassy-executor = { path = "./embassy/embassy-executor" }
embassy-net = { path = "./embassy/embassy-net" }
